@@ -48,7 +48,7 @@ if not latex:
 
 test.write('SConstruct', """\
 import os
-env = Environment(ENV = { 'PATH' : os.environ['PATH'] })
+env = Environment()
 env.DVI('root.tex')
 """)
 
